# fal_demos

./: .gitignore  README.md  pyproject.toml
fal_demos/audio/: diffrhythm.py
fal_demos/image/: common.py  hunyuan3d.py  sana.py
fal_demos/tts/: kokoro.py
fal_demos/video/: wan.py
